--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Slack bot to manage Scott emojis usage by team members",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./tools/server.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,6 @@
   "bugs": {
     "url": "https://github.com/evil-raph/great-scotts-tm/issues"
   },
-  "homepage": "https://github.com/evil-raph/great-scotts-tm#readme"
+  "homepage": "https://github.com/evil-raph/great-scotts-tm#readme",
+  "dependencies": {}
 }
