--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
     "url": "https://github.com/evil-raph/great-scotts-tm/issues"
   },
   "homepage": "https://github.com/evil-raph/great-scotts-tm#readme",
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.16.3"
+  }
 }
