--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Slack bot to manage Scott emojis usage by team members",
   "main": "index.js",
   "scripts": {
-    "start": "node ./tools/server.js"
+    "start": "babel-node ./tools/server.js --presets es2015,stage-2"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,10 @@
   "homepage": "https://github.com/evil-raph/great-scotts-tm#readme",
   "dependencies": {
     "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1"
   }
 }
