--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/evil-raph/great-scotts-tm#readme",
   "dependencies": {
+    "botkit": "^0.6.14",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3"
   },
   "devDependencies": {
